atualizando api
