# React/sprint-2-api/Event+/webapi.event+/Repositories/ComentariosEventoRepository.cs
@@ -141,7 +141,7 @@ namespace webapi.event_.Repositories
             }
         }
 
-        public List<ComentariosEvento> ListarSomenteExibe()
+        public List<ComentariosEvento> ListarSomenteExibe(Guid id)
         {
 
             try
@@ -165,7 +165,7 @@ namespace webapi.event_.Repositories
                             NomeEvento = c.Evento!.NomeEvento,
                         }
 
-                    }).Where(c=> c.Exibe == true).ToList();
+                    }).Where(c=> c.Exibe == true && c.IdEvento == id).ToList();
             }
             catch (Exception)
             {
