# React/sprint-2-api/Event+/webapi.event+/bin/Release/net7.0/swagger.json
@@ -10,6 +10,33 @@
     "version": "v1"
   },
   "paths": {
+    "/api/ComentariosEvento/CadastroIA": {
+      "post": {
+        "tags": [
+          "ComentariosEvento"
+        ],
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/ComentariosEvento"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/ComentariosEvento": {
       "get": {
         "tags": [
@@ -38,6 +65,27 @@
             "schema": {
               "$ref": "#/definitions/ComentariosEvento"
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/ComentariosEvento/ListarSomenteExibe": {
+      "get": {
+        "tags": [
+          "ComentariosEvento"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id",
+            "type": "string",
+            "format": "uuid",
+            "collectionFormat": "multi"
           }
         ],
         "responses": {
